--- a/app/www/package.json
+++ b/app/www/package.json
@@ -16,6 +16,7 @@
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/tmi.js": "^1.8.1",
